...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsPage">

    <EditText
        android:id="@+id/settingsUserName"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_marginStart="113dp"
        android:ems="10"
        android:text="@string/user_name"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="107dp"
        android:text="@string/save_user_name"
        app:layout_constraintBottom_toBottomOf="parent"
...
