<resources>
    <string name="app_name">taskmaster</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_task">Add Task</string>
    <string name="my_task">My Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_discription">Task Discription</string>
    <string name="task_details">Task Details</string>
    <string name="link">link</string>
    <string name="lorem_ipsum"></string>
    <string name="do_something">Do Something</string>
    <string name="submitted">Submitted</string>
    <string name="todo">TODO</string>
    <string name="all_tasks">All Tasks</string>
    <string name="title_label">title_label</string>
    <string name="body_label">body_label</string>
    <string name="status_label">status_label</string>
    <string name="delete">delete</string>

    <string name="my_tasks">My Tasks</string>
    <string name="task_one">task one</string>
    <string name="task_two">Task Two</string>
    <string name="task_three">Task Three</string>
    <string name="setting_page">Setting Page</string>
    <string name="display_username">display username</string>
    <string name="user_name">User Name</string>
    <string name="save_user_name">Save User Name</string>
    <string name="textview">TextView</string>
    <string name="lorem_ipsum_text_view_discription_for_the_task_like_a_task_details">Lorem Ipsum Text View discription for the task like a task details</string>
    <string name="title">title</string>
</resources>